// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageHeader > applies the top-only vertical padding class 1`] = `
<DocumentFragment>
  <div
    class="page-header--vertical-padding-top-only"
  >
    <div
      class="page-header "
      data-component="page-header"
    >
      <h1
        class="page-header__heading "
      >
        Sign-in
      </h1>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageHeader > prefers backLink over breadcrumbs 1`] = `
<DocumentFragment>
  <div>
    <div
      class="page-header "
      data-component="page-header"
    >
      <div
        class="page-header__breadcrumbs"
      >
        <a
          class="_back-link_71902c"
          data-component="back-link"
          href="/previous"
        >
          Back
        </a>
      </div>
      <h1
        class="page-header__heading "
      >
        Sign-in
      </h1>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageHeader > preserves a supplied className with top-only vertical padding 1`] = `
<DocumentFragment>
  <div
    class="custom-page-header page-header--vertical-padding-top-only"
  >
    <div
      class="page-header "
      data-component="page-header"
    >
      <h1
        class="page-header__heading "
      >
        Sign-in
      </h1>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageHeader > renders a back link in the page header navigation slot 1`] = `
<DocumentFragment>
  <div>
    <div
      class="page-header "
      data-component="page-header"
    >
      <div
        class="page-header__breadcrumbs"
      >
        <a
          class="_back-link_71902c"
          data-component="back-link"
          href="/previous"
        >
          Back
        </a>
      </div>
      <h1
        class="page-header__heading "
      >
        Sign-in
      </h1>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageHeader > renders the heading 1`] = `
<DocumentFragment>
  <div>
    <div
      class="page-header "
      data-component="page-header"
    >
      <h1
        class="page-header__heading "
      >
        Sign-in
      </h1>
    </div>
  </div>
</DocumentFragment>
`;
